# Ensemble

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  generate-ico.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.codex/: config.toml
.dev/: auto-classify-analysis.md  mcp-import-fix-analysis.md  release-execution-plan.md  release-readiness-analysis.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: 00-project-understanding.md  01-phase1-subagent-plan.md  02-development-master-plan.md  03-batch1-project-init-plan.md  04-batch2-components-plan.md  05-batch3-layout-plan.md  06-batch4-8-modules-plan.md  07-batch9-tauri-backend-plan.md  10-current-status-analysis.md  11-phase1-verification-plan.md  12-verification-files.md  13-verification-compile.md  14-verification-content.md  15-backend-verification-final.md  20-phase2-integration-master-plan.md  21-stores-analysis.md  22-batch1-integration-subagent-plan.md  23-testing-subagent-plan.md  24-testing-results.md  25-visual-verification-skills.md  26-visual-verification-mcp-scenes.md  27-visual-verification-projects-settings.md  28-final-acceptance-report.md  29-debug-report.md  30-bug1-investigation.md  30-bug2-3-investigation.md  30-rust-struct-comparison.md  31-bug-fix-plan.md  32-white-screen-debug.md  33-white-screen-root-cause.md  34-category-tag-inline-edit-understanding.md  34-current-sidebar-analysis.md  34-current-store-analysis.md  34-design-add-category.md  (+28 more)
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: classify.rs  claude_md.rs  config.rs  data.rs  dialog.rs  import.rs  mcps.rs  mod.rs  plugins.rs  skills.rs  symlink.rs  trash.rs  usage.rs
src-tauri/src/utils/: mod.rs  parser.rs  path.rs
(+274 files in other folders)
