[package]
name = "ensemble"
version = "1.0.0"
description = "Manage Claude Code Skills, MCP Servers, and CLAUDE.md files"
authors = ["O0000-code"]
license = "MIT"
repository = "https://github.com/O0000-code/Ensemble"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ensemble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-single-instance = "2"
urlencoding = "2.1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
regex = "1"
